<resources>
    <string name="app_name">MaharaDroid</string>
    <string name="artefacts_banner_text">Open source ePortfolios</string>
    <string name="artefacts_banner_text2">[mah-har-rah;verb]: to think, thinking, thought</string>
    <string name="artefacts_help">&lt;p&gt;Thanks for using MaharaDroid!&lt;/p&gt; 
        &lt;p&gt;To get started touch Menu -&gt; Preferences.&lt;/p&gt;
        &lt;p&gt;
		Enter your Mahara username on set the initial token. At the same time visit Mahara (Settings) and set the same token value and click update. 
		Back in MaharaDroid touch your back button, and an authentication attempt will be made. 
		&lt;/p&gt;
		&lt;p&gt;
		Once authenticated check the Menu for options on writing Journal posts.
		Alternatively when taking photos, videos or recording audio look for options to \'share\' these files with MaharaDroid.
		&lt;/p&gt;         
    </string>
    <string name="saved">Saved</string>
    <string name="savedanduploadready">Saved &amp; Ready for Upload</string>
    <string name="artefacts_no_saved_artefacts">Nothing saved at present.</string>
    <string name="options_menu_prefs">Preferences</string>
    <string name="options_menu_account">Account &amp; Sync</string>
    <string name="options_menu_image_gallery">Add Image</string>
    <string name="options_menu_audio_gallery">Add Audio</string>
    <string name="options_menu_video_gallery">Add Video</string>
    <string name="options_menu_compose">Write</string>
    <string name="options_menu_deleteall">Delete All</string>
    <string name="options_menu_uploadall">Upload All</string>
    <string name="context_menu_upload">Upload</string>
    <string name="context_menu_view">View</string>
    <string name="context_menu_delete">Delete</string>
    <string name="prefcat_authentication">Mahara Authentication Details</string>
    <string name="pref_auth_username_key">auth.username</string>
    <string name="pref_auth_username_title">Username</string>
    <string name="pref_auth_username_summary">Enter your Mahara username</string>
    <string name="pref_auth_token_key">auth.token</string>
    <string name="pref_auth_token_title">Token</string>
    <string name="pref_auth_token_summary">Enter your Mahara mobile token</string>
    <string name="prefcat_connection">Mahara Connection Details</string>
    <string name="pref_base_url_key">upload.base_uri</string>
    <string name="pref_base_url_title">Mahara Base URI</string>
    <string name="pref_base_url_summary">Enter the Mahara base URL for file posts &amp; syncronisation</string>
    <string name="pref_base_url_default">http://solent-mahara.catalystdemo.co.uk</string>
    <string name="pref_upload_url_key">upload.uri</string>
    <string name="pref_upload_url_title">Upload URI</string>
    <string name="pref_upload_url_summary">Enter the URL to post files to Mahara</string>
    <string name="pref_upload_url_default">/api/mobile/upload.php</string>
    <string name="pref_sync_url_key">sync.uri</string>
    <string name="pref_sync_url_title">Sync URI</string>
    <string name="pref_sync_url_summary">Enter the sync URL to Mahara</string>
    <string name="pref_sync_url_default">/api/mobile/sync.php</string>
    <string name="pref_upload_connection_key">upload.connection</string>
    <string name="pref_upload_connection_title">Connection Type</string>
    <string name="pref_upload_connection_summary">Restrict upload to the following connection types (default is fall back to handset settings):</string>
    <string-array name="pref_upload_connection_entry">
        <item>Default</item>
        <item>WiFi only</item>
        <item>Mobile only</item>
    </string-array>
    <string-array name="pref_upload_connection_entryValues">
        <item></item>
        <item>wifi</item>
        <item>mobile</item>
    </string-array>
    <string name="prefcat_defaults">Application Defaults</string>
    <string name="prefcat_defaults_post">Default Post Settings</string>
    <string name="pref_upload_journal_default_key">upload.journal.default</string>
    <string name="pref_upload_journal_default_title">Journal post by default</string>
    <string name="pref_upload_journal_default_summary">Check to select a default journal to post to</string>
    <string name="pref_upload_journal_key">upload.journal</string>
    <string name="pref_upload_journal_title">Default journal</string>
    <string name="pref_upload_journal_summary">Select the default journal to post to.
        										Note: nothing will be shown until your first sync.</string>
    <string name="pref_upload_folder_default_key">upload.folder.default</string>
    <string name="pref_upload_folder_default_title">Upload to a default folder</string>
    <string name="pref_upload_folder_default_summary">Check to select the default folder to upload your files into</string>
    <string name="pref_upload_folder_key">upload.folder</string>
    <string name="pref_upload_folder_title">Upload Folder</string>
    <string name="pref_upload_folder_summary">Select the default folder to upload your files into. 
        									Note: nothing will be shown until your first sync.</string>
    <string name="pref_upload_tags_default_key">upload.tags.default</string>
    <string name="pref_upload_tags_default_title">Set tags by default</string>
    <string name="pref_upload_tags_default_summary">Check to select the default tag to add to all uploaded files/journals</string>
    <string name="pref_upload_tags_key">upload.tags</string>
    <string name="pref_upload_tags_title">Tags</string>
    <string name="pref_upload_tags_summary">Select the default tag to add to all uploaded files/journals.
        									Note: nothing will be shown until your first sync.</string>
    <string name="prefcat_defaults_notification">Default Notification Settings</string>
   	<string name="pref_sync_notification_usermessage_key">usermessages</string>
	<string name="pref_sync_notification_usermessage_summary">Receive notifications when users send messages to you</string>
	<string name="pref_sync_notification_usermessage_title">User messages</string>
	<string name="pref_sync_notification_usermessage_default">true</string>
	<string name="pref_sync_notification_feedback_key">feedback</string>
	<string name="pref_sync_notification_feedback_summary">Receive notifications when you receive feedback</string>
	<string name="pref_sync_notification_feedback_title">Feedback</string>
	<string name="pref_sync_notification_feedback_default">true</string>
	<string name="pref_sync_notification_newpost_key">newpost</string>
	<string name="pref_sync_notification_newpost_summary">Receive notifications about new posts</string>
	<string name="pref_sync_notification_newpost_title">New posts</string>
	<string name="pref_sync_notification_newpost_default">true</string>
   	<string name="pref_sync_notification_maharamessage_key">maharamessage</string>
	<string name="pref_sync_notification_maharamessage_summary">Receive notifications when you receive a message from Mahara</string>
	<string name="pref_sync_notification_maharamessage_title">Mahara messages</string>
	<string name="pref_sync_notification_maharamessage_default">true</string>
   	<string name="pref_sync_notification_groupmessage_key">groupmessage</string>
	<string name="pref_sync_notification_groupmessage_summary">Receive notifications when you receive a group message</string>
	<string name="pref_sync_notification_groupmessage_title">Group messages</string>
	<string name="pref_sync_notification_groupmessage_default">false</string>
   	<string name="pref_sync_notification_institutionmessage_key">institutionmessage</string>
	<string name="pref_sync_notification_institutionmessage_summary">Receive notifications when you receive an instituition message</string>
	<string name="pref_sync_notification_institutionmessage_title">Instituition messages</string>
	<string name="pref_sync_notification_institutionmessage_default">false</string>
   	<string name="pref_sync_notification_watchlist_key">watchlist</string>
	<string name="pref_sync_notification_watchlist_summary">Receive notifications when you receive a message from a watchlist</string>
	<string name="pref_sync_notification_watchlist_title">Watchlist messages</string>
	<string name="pref_sync_notification_watchlist_default">false</string>
   	<string name="pref_sync_notification_viewaccess_key">viewaccess</string>
	<string name="pref_sync_notification_viewaccess_summary">Receive notifications about view access</string>
	<string name="pref_sync_notification_viewaccess_title">View access messages</string>
	<string name="pref_sync_notification_viewaccess_default">false</string>
   	<string name="pref_sync_notification_contactus_key">contactus</string>
	<string name="pref_sync_notification_contactus_summary">Receive notifications about contact us messages</string>
	<string name="pref_sync_notification_contactus_title">Contact us messages</string>
	<string name="pref_sync_notification_contactus_default">false</string>
   	<string name="pref_sync_notification_objectionable_key">objectionable</string>
	<string name="pref_sync_notification_objectionable_summary">Receive notifications about objectionable messages</string>
	<string name="pref_sync_notification_objectionable_title">Objectionable messages</string>
	<string name="pref_sync_notification_objectionable_default">false</string>
   	<string name="pref_sync_notification_virusrepeat_key">virusrepeat</string>
	<string name="pref_sync_notification_virusrepeat_summary">Receive notifications about virus repeat messages</string>
	<string name="pref_sync_notification_virusrepeat_title">Virus repeat messages</string>
	<string name="pref_sync_notification_virusrepeat_default">false</string>
   	<string name="pref_sync_notification_virusrelease_key">virusrelease</string>
	<string name="pref_sync_notification_virusrelease_summary">Receive notifications about virus release messages</string>
	<string name="pref_sync_notification_virusrelease_title">Virus release messages</string>
	<string name="pref_sync_notification_virusrelease_default">false</string>
    <string name="pref_sync_notification_key">sync.notification</string>
    <string name="pref_sync_notification_title">Enable Sync Notifications</string>
    <string name="pref_sync_notification_summary">Raise notifications if new messages are found during syncronisation.</string>
    <string name="prefcat_advanced">Advanced Settings</string>
    <string name="pref_sync_periodic_key">sync.periodic</string>
    <string name="pref_sync_periodic_title">Periodic Sync</string>
    <string name="pref_sync_periodic_summary">Enter the time in minutes to force a perioidc sync (0 or blank for none)</string>
    <string name="pref_sync_time_key">sync.time</string>
    <string name="pref_sync_time_title">Last Sync Time</string>
    <string name="pref_sync_time_summary">The time, in seconds, received from the server of last sync.</string>
    <string name="pref_menu_reset">Reset</string>
    <string name="pref_menu_about">About</string>
    <string name="pref_menu_scan">Scan</string>
    <string name="btnok">OK</string>
    <string name="btnedit">Edit</string>
    <string name="btnupload">Upload</string>
    <string name="btnsave">Save</string>
    <string name="btndelete">Delete</string>
    <string name="btncancellabel">Cancel</string>
    <string name="upload_journal_label">Journal:</string>
    <string name="upload_confirm_label"></string>
    <string name="upload_confirm_text">Yes, the file I am attempting to upload is my own or I have express 
								permission to reproduce and/or distribute this item. My use of this file 
								does not breach any local Copyright legislation. This file also adheres to 
								the Terms and Conditions outlined on this site.</string>
    <string name="upload_title_label">Title:</string>
    <string name="upload_tags_label">Tag(s):</string>
    <string name="upload_time_label">Last:</string>
</resources>