<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/top"
	   	    android:padding="10dp"	  
	   	    android:orientation="vertical"
		    >
		
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/JournalLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
				  
				<TextView android:text="@string/upload_journal_label"
					  android:layout_width="60dip"
					  android:layout_height="wrap_content"
	  				  android:padding="2dip"
	  				  android:layout_margin="5dip"
	  				  style="@android:style/TextAppearance.Small">
				</TextView>
			    <Spinner 
			        android:id="@+id/upload_journal_spinner"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"

			    	/>
			</LinearLayout>
			    		    
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtifactConfirmLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
				  
					<CheckBox android:text="@string/upload_confirm_label"
							style="@android:style/TextAppearance.Small"
							android:id="@+id/chkUpload"
						    android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="5dip"
			  							  />
					
					<TextView android:text="@string/upload_confirm_text"
							  android:id="@+id/txtArtifactConfirm"
							  android:layout_width="wrap_content"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="5dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
			</LinearLayout>
			<!-- 
					<ImageView android:id="@+id/UploadArtifact"
							   android:layout_width="wrap_content"
							   android:layout_height="wrap_content">
				   	</ImageView>
 			-->
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtifactTitleLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">

					<TextView android:text="@string/upload_title_label"
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
				  
					<EditText android:text=""
							  android:id="@+id/txtArtifactTitle"
							  android:singleLine="true"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content">
				  	</EditText>
					
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtifactDescriptionLayout"
				  android:layout_width="fill_parent"
  				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">

					<TextView android:text="@string/upload_description_label"
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
					<EditText android:text=""
							  android:id="@+id/txtArtifactDescription"
							  android:singleLine="false"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  >
				  	</EditText>
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">

					<TextView android:text="@string/upload_tags_label"
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
					
					<EditText android:text=""
							  android:id="@+id/txtArtifactTags"
							  android:singleLine="true"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content">
				  	</EditText>
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">
					<TextView android:text=""
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
			
				    <Spinner 
					        android:id="@+id/upload_tags_spinner"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
				    />
			</LinearLayout>	
	
			<LinearLayout
			  xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/ArtifactSettingsButtonLayout"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_margin="5dp"
			  android:gravity="center_horizontal"
			  android:orientation="horizontal">
			  
				<Button android:text="@string/btnupload"
						android:id="@+id/btnUpload"
						android:layout_weight="1"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:enabled="false"
						style="@style/MaharaButton"
						>
				</Button>
				<Button android:text="@string/btnsave"
						android:id="@+id/btnSave"
						android:layout_weight="1"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:enabled="false"
						style="@style/MaharaButton"
						>
				</Button>
				<Button android:text="@string/btncancellabel"
						android:id="@+id/btnCancel"
						android:layout_weight="1"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						style="@style/MaharaButton"
						>
				</Button>
				
			</LinearLayout>
					<EditText android:text=""
							  android:id="@+id/txtArtifactId"
							  android:singleLine="true"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  android:visibility="invisible">
				  	</EditText>
		</LinearLayout>
	
</ScrollView>